# mwaa-practice

./: app.py  cdk.json  requirements.txt
dags/: broken-dag.py  data-dag.py  docker-dag.py  ecs-dag.py  example-dag.py  massive-parallel-dag.py  s3-hook-dag.py  sample-dag.py  variable-and-secret-dag.py  virtual-env-dag.py
dags/dbt_project/: dbt-dag-connection.py  dbt-dag-hard-coded.py  dbt-dag-secrets-manager.py  dbt-dag.py  dbt_project.yml  profiles.yml
dags/dbt_project/models/: schema.yml
dags/dbt_project/profile_connection/: profiles.yml
dags/dbt_project/profile_hard_coded/: profiles.yml
dags/dbt_project/profile_secrets_manager/: profiles.yml
dags/dbt_project/tests/: assert_category_is_unique.sql
dags/ecs_dag/: ecs-dag.py  silly_app.py
docker_image/: Dockerfile
mwaa_practice/: __init__.py
requirements/: pyproject.toml  requirements.txt  startup.sh
service/: Dockerfile  app.py
